# todo-console-app

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
.specify/memory/: constitution.md
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
skills/: input_validator.py  search_logic.py  sorting_engine.py  sorting_logic.py  validator.py
specs/: basic-task-management.md
specs/001-core-functionality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-functionality/contracts/: commands.md
src/: __init__.py  main.py  manager.py  todo_app.py
src/cli/: commands.py
src/models/: task.py
src/services/: __init__.py  background_reminder_service.py  notification_engine.py  search_logic.py  sorting_logic.py  storage_engine.py  task_service.py  task_subagent.py  time_engine.py  validator.py
src/ui/: __init__.py  console_ui.py  display_subagent.py
subagents/: data_agent.py  display_subagent.py  interaction_agent.py  task_subagent.py
